--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.18.0",
+    "ember-engines": "^0.5.14",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.18.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "super-blog": "github:villander/super-blog-engine"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
